--- a/Weine.css
+++ b/Weine.css
@@ -106,7 +106,7 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 349px;
+    min-height: 390px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -121,6 +121,7 @@
   }
 
   .u-section-1 .u-text-1 {
-    margin: -284px 127px 256px 10px;
+    margin-right: 128px;
+    margin-left: 9px;
   }
 }
